--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-	"dependencies": {
-		"linkcord": "file:linkcord-0.0.0.tgz"
-	},
-	"description": "",
+	"author": "Overseer Team",
 	"devDependencies": {
 		"@biomejs/biome": "2.3.10",
 		"@commitlint/cli": "20.2.0",
 		"@commitlint/config-conventional": "20.2.0",
 		"@commitlint/types": "20.2.0",
 		"@types/node": "25.0.3",
-		"cross-env": "10.1.0",
 		"husky": "9.1.7",
 		"lint-staged": "16.2.7",
 		"rimraf": "6.1.2",
 		"tsc-alias": "1.8.16",
-		"tsx": "4.21.0"
+		"tsx": "4.21.0",
+		"turbo": "2.7.2",
+		"typescript": "5.9.3"
 	},
 	"engines": {
 		"node": ">=22.18.0"
@@ -25,7 +23,6 @@
 			"pnpm biome:write"
 		]
 	},
-	"main": "dist/index.js",
 	"name": "overseer",
 	"packageManager": "pnpm@10.0.0",
 	"repository": {
@@ -36,14 +33,8 @@
 		"biome:check": "biome check",
 		"biome:ci": "biome ci",
 		"biome:write": "biome check --write",
-		"build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
-		"prebuild": "pnpm rimraf",
 		"prepare": "husky",
-		"rimraf": "rimraf dist",
-		"start:dev": "cross-env NODE_ENV=development tsx src/index.ts",
-		"start:pm2": "pm2 start ecosystem.config.cjs",
-		"start:prod": "cross-env NODE_ENV=production node dist/index.js"
+		"turbo:build": "turbo build"
 	},
-	"type": "module",
-	"version": "0.0.0"
+	"type": "module"
 }
