--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,5 @@ jobs:
             - name: Install Dependencies
               run: pnpm install
 
-            - name: Build Client
-              run: pnpm build
+            - name: Build Applications
+              run: pnpm turbo:build
