--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
 	},
 	"name": "overseer",
 	"packageManager": "pnpm@10.0.0",
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"esbuild"
+		]
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/FancyStudioTeam/Overseer"
