--- a/turbo.json
+++ b/turbo.json
@@ -2,8 +2,9 @@
 	"$schema": "https://turborepo.com/schema.json",
 	"tasks": {
 		"build": {
-			"dependsOn": [
-				"^build"
+			"outputs": [
+				".nuxt/**",
+				"dist/**"
 			]
 		}
 	}
