chore(Biome): enable experimental support

--- a/apps/dashboard/biome.json
+++ b/apps/dashboard/biome.json
@@ -11,5 +11,12 @@
 			"**",
 			"!**/.nuxt"
 		]
+	},
+	"html": {
+		"experimentalFullSupportEnabled": true,
+		"formatter": {
+			"enabled": true,
+			"indentScriptAndStyle": true
+		}
 	}
 }
