style: use single quotes for strings

--- a/biome.json
+++ b/biome.json
@@ -28,6 +28,12 @@
 		"lineEnding": "lf",
 		"lineWidth": 140
 	},
+	"javascript": {
+		"formatter": {
+			"jsxQuoteStyle": "single",
+			"quoteStyle": "single"
+		}
+	},
 	"linter": {
 		"domains": {
 			"project": "all",
