chore: add MongoDB support

--- a/apps/dashboard/.env.example
+++ b/apps/dashboard/.env.example
@@ -8,4 +8,10 @@ NUXT_CLIENT_TOKEN = ""
 
 NUXT_ENCRYPTION_KEY = ""
 
+NUXT_MONGO_DB_COLLECTION_NAME = ""
+NUXT_MONGO_DB_CONNECTION_URL = ""
+NUXT_MONGO_DB_DATABASE_NAME = ""
+NUXT_MONGO_DB_PASSWORD = ""
+NUXT_MONGO_DB_USER = ""
+
 NUXT_SESSION_KEY = ""
