--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -3,6 +3,7 @@
 	"dependencies": {
 		"jose": "6.1.3",
 		"lucide-vue-next": "0.562.0",
+		"mongodb": "7.0.0",
 		"nuxt": "4.2.2",
 		"reka-ui": "2.7.0",
 		"tailwind-merge": "3.4.0",
