--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -14,6 +14,7 @@
 	"private": true,
 	"scripts": {
 		"build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+		"linkcord:update": "pnpm add ./linkcord-0.0.0.tgz --force",
 		"prebuild": "pnpm rimraf",
 		"rimraf": "rimraf dist",
 		"start:dev": "cross-env NODE_ENV=development tsx src/index.ts",
