feat: new configuration files

--- a/apps/dashboard/.env.example
+++ b/apps/dashboard/.env.example
@@ -1,13 +1,8 @@
-NUXT_PUBLIC_BASE_URL = "http://localhost:3000"
+NEXT_PUBLIC_BASE_URL = "http://localhost:3000"
 
-NUXT_CLIENT_ID = ""
-NUXT_CLIENT_SECRET = ""
-NUXT_CLIENT_TOKEN = ""
+AUTH_SECRET = ""
 
-NUXT_ENCRYPTION_KEY = ""
+CLIENT_ID = ""
+CLIENT_SECRET = ""
 
-NUXT_MONGO_DB_COLLECTION_NAME = ""
-NUXT_MONGO_DB_CONNECTION_URL = ""
-NUXT_MONGO_DB_DATABASE_NAME = ""
-
-NUXT_SESSION_KEY = ""
+MONGO_DB_CONNECTION_URL = ""
