--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -1,29 +1,28 @@
 {
 	"author": "Overseer Team",
 	"dependencies": {
-		"jose": "6.1.3",
-		"lucide-vue-next": "0.562.0",
+		"better-auth": "1.4.13",
 		"mongodb": "7.0.0",
-		"nuxt": "4.2.2",
-		"reka-ui": "2.7.0",
-		"tailwind-merge": "3.4.0",
-		"tailwind-variants": "3.2.2",
-		"vue": "3.5.26",
-		"vue-router": "4.6.4"
+		"next": "16.1.2",
+		"react": "19.2.3",
+		"react-dom": "19.2.3"
 	},
 	"devDependencies": {
-		"@tailwindcss/vite": "4.1.18",
-		"discord-api-types": "0.38.37",
+		"@tailwindcss/postcss": "4.1.18",
+		"@types/node": "25.0.8",
+		"@types/react": "19.2.8",
+		"@types/react-dom": "19.2.3",
+		"babel-plugin-react-compiler": "1.0.0",
+		"server-only": "0.0.1",
 		"tailwindcss": "4.1.18"
 	},
 	"license": "MIT",
 	"name": "dashboard",
 	"private": true,
 	"scripts": {
-		"build": "nuxt build",
-		"dev": "nuxt dev",
-		"prepare": "nuxt prepare",
-		"preview": "nuxt preview"
+		"build": "next build",
+		"start:dev": "next dev",
+		"start:prod": "next start"
 	},
 	"version": "0.0.0"
 }
