--- a/biome.json
+++ b/biome.json
@@ -124,5 +124,11 @@
 			}
 		}
 	},
-	"root": true
+	"root": true,
+	"vcs": {
+		"clientKind": "git",
+		"defaultBranch": "main",
+		"enabled": true,
+		"useIgnoreFile": true
+	}
 }
