feat: encryption methods

--- a/apps/dashboard/.env.example
+++ b/apps/dashboard/.env.example
@@ -1,8 +1,10 @@
-NEXT_PUBLIC_BASE_URL = "http://localhost:3000"
-
 AUTH_SECRET = ""
 
 CLIENT_ID = ""
 CLIENT_SECRET = ""
 
+ENCRYPTION_KEY = ""
+
 MONGO_DB_CONNECTION_URL = ""
+
+NEXT_PUBLIC_BASE_URL = "http://localhost:3000"
