--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -1,14 +1,19 @@
 {
 	"author": "Overseer Team",
 	"dependencies": {
+		"@mdx-js/loader": "3.1.1",
+		"@mdx-js/react": "3.1.1",
+		"@next/mdx": "16.1.2",
 		"better-auth": "1.4.13",
 		"mongodb": "7.0.0",
 		"next": "16.1.2",
 		"react": "19.2.3",
-		"react-dom": "19.2.3"
+		"react-dom": "19.2.3",
+		"remark-gfm": "4.0.1"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "4.1.18",
+		"@types/mdx": "2.0.13",
 		"@types/node": "25.0.8",
 		"@types/react": "19.2.8",
 		"@types/react-dom": "19.2.3",
