--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -5,6 +5,7 @@
 		"@mdx-js/react": "3.1.1",
 		"@next/mdx": "16.1.2",
 		"better-auth": "1.4.13",
+		"client-only": "0.0.1",
 		"mongodb": "7.0.0",
 		"next": "16.1.2",
 		"react": "19.2.3",
