--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,5 +1,5 @@
 {
-	"author": "Overseer Team",
+	"author": "Vanguard Development Team",
 	"dependencies": {
 		"linkcord": "file:linkcord-0.0.0.tgz",
 		"winston": "3.19.0"
