--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -1,5 +1,5 @@
 {
-	"author": "Overseer Team",
+	"author": "Vanguard Development Team",
 	"dependencies": {
 		"@mdx-js/loader": "3.1.1",
 		"@mdx-js/react": "3.1.1",
