--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"author": "Overseer Team",
+	"author": "Vanguard Development Team",
 	"devDependencies": {
 		"@biomejs/biome": "2.3.11",
 		"@commitlint/cli": "20.3.1",
@@ -23,7 +23,7 @@
 			"pnpm biome:write"
 		]
 	},
-	"name": "overseer",
+	"name": "vanguard",
 	"packageManager": "pnpm@10.0.0",
 	"pnpm": {
 		"onlyBuiltDependencies": [
@@ -32,7 +32,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/FancyStudioTeam/Overseer"
+		"url": "https://github.com/FancyStudioTeam/Vanguard"
 	},
 	"scripts": {
 		"biome:check": "biome check",
