chore: update Biome rules

--- a/apps/dashboard/biome.json
+++ b/apps/dashboard/biome.json
@@ -38,6 +38,9 @@
 					}
 				}
 			},
+			"style": {
+				"noImplicitBoolean": "error"
+			},
 			"suspicious": {
 				"noUnknownAtRules": "off"
 			}
