--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -8,6 +8,7 @@
 		"client-only": "0.0.1",
 		"mongodb": "7.0.0",
 		"next": "16.1.2",
+		"radix-ui": "1.4.3",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
 		"remark-gfm": "4.0.1",
