--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -4,6 +4,7 @@
 		"@mdx-js/loader": "3.1.1",
 		"@mdx-js/react": "3.1.1",
 		"@next/mdx": "16.1.2",
+		"@phosphor-icons/react": "2.1.10",
 		"better-auth": "1.4.13",
 		"client-only": "0.0.1",
 		"mongodb": "7.0.0",
