--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -6,7 +6,6 @@
 		"@next/mdx": "16.1.2",
 		"@phosphor-icons/react": "2.1.10",
 		"better-auth": "1.4.13",
-		"client-only": "0.0.1",
 		"mongodb": "7.0.0",
 		"next": "16.1.2",
 		"radix-ui": "1.4.3",
@@ -22,6 +21,7 @@
 		"@types/react": "19.2.8",
 		"@types/react-dom": "19.2.3",
 		"babel-plugin-react-compiler": "1.0.0",
+		"client-only": "0.0.1",
 		"server-only": "0.0.1",
 		"tailwind-animations": "1.0.1",
 		"tailwindcss": "4.1.18"
@@ -34,5 +34,6 @@
 		"start:dev": "next dev",
 		"start:prod": "next start"
 	},
+	"type": "module",
 	"version": "0.1.0"
 }
