--- a/apps/dashboard/.env.example
+++ b/apps/dashboard/.env.example
@@ -6,5 +6,6 @@ CLIENT_SECRET = ""
 ENCRYPTION_KEY = ""
 
 MONGO_DB_CONNECTION_URL = ""
+MONGO_DB_DATABASE_NAME = ""
 
 NEXT_PUBLIC_BASE_URL = "http://localhost:3000"
