--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
 		"@commitlint/cli": "20.3.1",
 		"@commitlint/config-conventional": "20.3.1",
 		"@commitlint/types": "20.3.1",
-		"@types/node": "25.0.9",
 		"husky": "9.1.7",
 		"lint-staged": "16.2.7",
 		"rimraf": "6.1.2",
 		"tsc-alias": "1.8.16",
 		"tsx": "4.21.0",
-		"turbo": "2.7.5",
-		"typescript": "5.9.3"
+		"turbo": "2.7.5"
 	},
 	"engines": {
 		"node": ">=22.18.0"
