--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -21,7 +21,7 @@
 		"prebuild": "pnpm rimraf",
 		"rimraf": "rimraf dist",
 		"start:dev": "cross-env NODE_ENV=development tsx src/index.ts",
-		"start:pm2": "pm2 start ecosystem.config.cjs",
+		"start:pm2": "pm2 start pnpm --name 'Vanguard Client' -- start:prod",
 		"start:prod": "cross-env NODE_ENV=production node dist/index.js"
 	},
 	"type": "module",
