--- a/apps/dashboard/.env.example
+++ b/apps/dashboard/.env.example
@@ -6,6 +6,7 @@ CLIENT_SECRET = ""
 ENCRYPTION_KEY = ""
 
 MONGO_DB_CONNECTION_URL = ""
+MONGO_BD_COLLECTION_NAME = ""
 MONGO_DB_DATABASE_NAME = ""
 
 NEXT_PUBLIC_BASE_URL = "http://localhost:3000"
