--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -12,7 +12,8 @@
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
 		"remark-gfm": "4.0.1",
-		"tailwind-merge": "3.4.0"
+		"tailwind-merge": "3.4.0",
+		"winston": "3.19.0"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "4.1.18",
