--- a/apps/dashboard/.env.example
+++ b/apps/dashboard/.env.example
@@ -1,5 +1,7 @@
 AUTH_SECRET = ""
 
+BASE_URL = ""
+
 CLIENT_ID = ""
 CLIENT_SECRET = ""
 
@@ -8,5 +10,3 @@ ENCRYPTION_KEY = ""
 MONGO_DB_CONNECTION_URL = ""
 MONGO_BD_COLLECTION_NAME = ""
 MONGO_DB_DATABASE_NAME = ""
-
-NEXT_PUBLIC_BASE_URL = "http://localhost:3000"
