--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -13,7 +13,8 @@
 		"react-dom": "19.2.3",
 		"remark-gfm": "4.0.1",
 		"tailwind-merge": "3.4.0",
-		"winston": "3.19.0"
+		"winston": "3.19.0",
+		"zod": "4.3.6"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "4.1.18",
