--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -1,11 +1,12 @@
 {
 	"author": "Vanguard Development Team",
 	"dependencies": {
+		"@discordjs/rest": "2.6.0",
 		"@mdx-js/loader": "3.1.1",
 		"@mdx-js/react": "3.1.1",
 		"@next/mdx": "16.1.4",
 		"@phosphor-icons/react": "2.1.10",
-		"better-auth": "1.4.17",
+		"jose": "6.1.3",
 		"mongodb": "7.0.0",
 		"next": "16.1.4",
 		"radix-ui": "1.4.3",
