--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -13,6 +13,7 @@
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
 		"remark-gfm": "4.0.1",
+		"swr": "2.3.8",
 		"tailwind-merge": "3.4.0",
 		"winston": "3.19.0",
 		"zod": "4.3.6"
