--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,17 +1,16 @@
 {
 	"author": "Vanguard Development Team",
 	"dependencies": {
+		"@prisma/client": "7.3.0",
 		"chalk": "5.6.2",
 		"linkcord": "file:linkcord-0.0.0.tgz",
-		"mongodb": "7.0.0",
-		"reflect-metadata": "0.2.2",
-		"typeorm": "0.3.28",
 		"winston": "3.19.0"
 	},
 	"devDependencies": {
 		"@types/node": "25.0.10",
 		"cross-env": "10.1.0",
 		"pm2": "6.0.14",
+		"prisma": "6.19.2",
 		"rimraf": "6.1.2",
 		"tsc-alias": "1.8.16",
 		"tsx": "4.21.0",
@@ -25,6 +24,7 @@
 		"build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
 		"linkcord:update": "pnpm add ./linkcord-0.0.0.tgz --force",
 		"prebuild": "pnpm rimraf",
+		"prisma:format": "prisma format",
 		"rimraf": "rimraf dist",
 		"start:dev": "cross-env NODE_ENV=development tsx src/index.ts",
 		"start:pm2": "pm2 start pnpm --name 'Vanguard Client' -- start:prod",
