--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -8,7 +8,7 @@
 		"@phosphor-icons/react": "2.1.10",
 		"jose": "6.1.3",
 		"mongodb": "7.0.0",
-		"next": "16.1.4",
+		"next": "16.1.5",
 		"radix-ui": "1.4.3",
 		"react": "19.2.4",
 		"react-dom": "19.2.4",
@@ -38,7 +38,7 @@
 	"private": true,
 	"scripts": {
 		"build": "next build",
-		"start:dev": "next dev",
+		"start:dev": "next dev -H 127.0.0.1 -p 3000",
 		"start:pm2": "pm2 start pnpm --name 'Vanguard Dashboard' -- start:prod",
 		"start:prod": "next start"
 	},
