--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -3,6 +3,7 @@
 	"dependencies": {
 		"chalk": "5.6.2",
 		"linkcord": "file:linkcord-0.0.0.tgz",
+		"mongodb": "7.0.0",
 		"winston": "3.19.0"
 	},
 	"devDependencies": {
@@ -22,7 +23,6 @@
 		"build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
 		"linkcord:update": "pnpm add ./linkcord-0.0.0.tgz --force",
 		"prebuild": "pnpm rimraf",
-		"prisma:format": "prisma format",
 		"rimraf": "rimraf dist",
 		"start:dev": "cross-env NODE_ENV=development tsx src/index.ts",
 		"start:pm2": "pm2 start pnpm --name 'Vanguard Client' -- start:prod",
