--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -2,10 +2,12 @@
 	"author": "Vanguard Development Team",
 	"dependencies": {
 		"@discordjs/rest": "2.6.0",
+		"@gsap/react": "2.1.2",
 		"@mdx-js/loader": "3.1.1",
 		"@mdx-js/react": "3.1.1",
 		"@next/mdx": "16.1.5",
 		"@phosphor-icons/react": "2.1.10",
+		"gsap": "3.14.2",
 		"jose": "6.1.3",
 		"mongodb": "7.0.0",
 		"next": "16.1.5",
