--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -6,6 +6,7 @@
 		"@mdx-js/react": "3.1.1",
 		"@next/mdx": "16.1.5",
 		"@phosphor-icons/react": "2.1.10",
+		"crypto-js": "4.2.0",
 		"jose": "6.1.3",
 		"mongodb": "7.0.0",
 		"next": "16.1.5",
@@ -20,6 +21,7 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "4.1.18",
+		"@types/crypto-js": "4.2.2",
 		"@types/mdx": "2.0.13",
 		"@types/node": "25.0.10",
 		"@types/react": "19.2.9",
